# HarnessExample

./: .gitignore  AGENTS.md  GUIDE.md  README.md  TEACHING.md  index.html  package-lock.json  package.json  pyproject.toml  server.mjs  styles.css
docs/: HARNESS_ENGINEERING_DESIGN.md  LESSON_PLAN.md  TEACHING_MANUAL.md
guides/: architecture.md  inferential-review.md  product-spec.md
harness/: check.js
src/: app.js  cart.js
src/instrument_harness_lab/: __init__.py  calibration.py  cli.py  controller.py  domain.py  instrument.py
src/instrument_harness_lab/sensors/: __init__.py  architecture_sensor.py  maintainability_sensor.py  run_feedback.py
test/: cart.test.js
tests/: test_calibration_behaviour.py  test_cli.py  test_sensors.py
