[project]
name = "instrument-harness-lab"
version = "0.1.0"
description = "A runnable Harness Engineering teaching project for instrument software teams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project.scripts]
instrument-lab = "instrument_harness_lab.cli:main"
harness-sensors = "instrument_harness_lab.sensors.run_feedback:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.coverage.run]
branch = true
source = ["instrument_harness_lab"]

[tool.coverage.report]
show_missing = true
fail_under = 90
